templates/hertzbeat_template.yaml
---
# Source: hertzbeat/templates/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-hertzbeat-database
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    component: database
---
# Source: hertzbeat/templates/manager/service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-hertzbeat-cluster"
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 1158
      targetPort: 1158
      protocol: TCP
      name: cluster
  selector:
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    component: manager
---
# Source: hertzbeat/templates/manager/service-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-hertzbeat-http"
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm 
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 1157
      targetPort: 1157
  selector:
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    component: manager
---
# Source: hertzbeat/templates/tsdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-hertzbeat-tsdb
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8428
      targetPort: 8428
      protocol: TCP
  selector:
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    component: tsdb
---
# Source: hertzbeat/templates/collector/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-hertzbeat-collector
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
    component: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hertzbeat
      app.kubernetes.io/instance: release-name
      component: collector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hertzbeat
        app.kubernetes.io/instance: release-name
        component: collector
    spec:
      securityContext:
        {}
      containers:
        - name: hertzbeat-collector
          securityContext:
            {}
          image: "tancloud/hertzbeat-collector:v1.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1159
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 1159
          readinessProbe:
            tcpSocket:
              port: 1159
          volumeMounts:
            - mountPath: /opt/hertzbeat-collector/config/application.yml
              subPath: application.yml
              name: application
          resources:
            {}
      volumes:
        - name: application
          configMap:
            name: release-name-hertzbeat-collector
---
# Source: hertzbeat/templates/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-hertzbeat
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
    component: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hertzbeat
      app.kubernetes.io/instance: release-name
      component: manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hertzbeat
        app.kubernetes.io/instance: release-name
        component: manager
    spec:
      securityContext:
        {}
      containers:
        - name: hertzbeat
          securityContext:
            {}
          image: "tancloud/hertzbeat:v1.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1157
              protocol: TCP
            - name: cluster
              containerPort: 1158
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 1157
          readinessProbe:
            tcpSocket:
              port: 1157
          volumeMounts:
            - mountPath: /opt/hertzbeat/config/application.yml
              subPath: application.yml
              name: application
            - mountPath: /opt/hertzbeat/config/sureness.yml
              subPath: sureness.yml
              name: sureness
          resources:
            {}
      volumes:
        - name: application
          configMap:
            name: release-name-hertzbeat
        - name: sureness
          configMap:
            name: release-name-hertzbeat
---
# Source: hertzbeat/templates/database/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-hertzbeat-database
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
    component: database
spec:
  replicas: 1
  serviceName: release-name-hertzbeat-database
  selector:
    matchLabels:
      app.kubernetes.io/name: hertzbeat
      app.kubernetes.io/instance: release-name
      component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hertzbeat
        app.kubernetes.io/instance: release-name
        component: database
    spec:
      securityContext:
        {}
      containers:
      - name: database
        image: mysql:8
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 1
          periodSeconds: 10
        resources:
            {}
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: ""
        - mountPath: /docker-entrypoint-initdb.d/schema.sql
          subPath: schema.sql
          name: schema
      volumes:
        - name: schema
          configMap:
            name: release-name-hertzbeat-database
        - name: data
          persistentVolumeClaim: 
            claimName: release-name-hertzbeat-database
---
# Source: hertzbeat/templates/tsdb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-hertzbeat-tsdb
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
    component: tsdb
spec:
  replicas: 1
  serviceName: release-name-hertzbeat-tsdb
  selector:
    matchLabels:
      app.kubernetes.io/name: hertzbeat
      app.kubernetes.io/instance: release-name
      component: tsdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hertzbeat
        app.kubernetes.io/instance: release-name
        component: tsdb
    spec:
      securityContext:
        {}
      containers:
      - name: tsdb
        image: victoriametrics/victoria-metrics:v1.95.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 8428
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8428
          initialDelaySeconds: 1
          periodSeconds: 10
        resources:
            {}
        volumeMounts:
        - name: data
          mountPath: /victoria-metrics-data
          subPath: ""
      volumes:
        - name: data
          persistentVolumeClaim: 
            claimName: release-name-hertzbeat-tsdb
---
# Source: hertzbeat/templates/manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "release-name-hertzbeat-ingress"
  annotations:
    {}
  labels:
    helm.sh/chart: hertzbeat-1.5.0
    app.kubernetes.io/name: hertzbeat
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: hertzbeat.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "release-name-hertzbeat-http"
                port:
                  number: 1157
  tls:
